force-app/main/default/objects/Rpl_Reva_Placement__c/Rpl_Reva_Placement__c.object-meta.xml
<CustomObject>
    <label>REVA Placement</label>
    <nameField>
        <label>REVA Placement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REVA Placements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>