force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>MTech</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Under Graduation</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
                <isActive>false</isActive>
                <label>BT</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <isActive>false</isActive>
                <label>MT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>