force-app/main/default/objects/Rpl_Reva_Placement__c/fields/CurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CurrentYear__c</fullName>
    <formula>YEAR(Rpl_Registration_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>