force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Is_Pre_Final_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Final_Year_2__c</fullName>
    <formula>SUBSTITUTE(
    TEXT(
        IF(
            ISPICKVAL(Course_Name__c, &apos;BTech&apos;),
            VALUE(TEXT(Rpl_Student_Batch__c)) + 3,
            IF(
                ISPICKVAL(Course_Name__c, &apos;Under Graduation&apos;),
                VALUE(TEXT(Rpl_Student_Batch__c)) + 3,
                VALUE(TEXT(Rpl_Student_Batch__c))
            )
        )
    ),
    &quot;,&quot;, &quot;&quot;
)</formula>
    <label>Is Pre Final Year (W/o comma)</label>
    <type>Text</type>
</CustomField>