force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Is_Pre_Final_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Final_Year__c</fullName>
    <formula>IF(
    ISPICKVAL(Course_Name__c, &apos;BTech&apos;),
    VALUE(SUBSTITUTE(TEXT(Rpl_Student_Batch__c), &quot;,&quot;, &quot;&quot;)) + 2,
    IF(
        ISPICKVAL(Course_Name__c, &apos;Under Graduation&apos;),
        VALUE(SUBSTITUTE(TEXT(Rpl_Student_Batch__c), &quot;,&quot;, &quot;&quot;)) + 1,
        VALUE(SUBSTITUTE(TEXT(Rpl_Student_Batch__c), &quot;,&quot;, &quot;&quot;))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pre Final Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>