force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Rpl_Academic_Degrees__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Academic_Degrees__c</fullName>
    <label>Academic Degrees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>REVA_Programs</valueSetName>
    </valueSet>
</CustomField>