force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Rpl_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Academic_Program__c</fullName>
    <label>Academic Program</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>