force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Rpl_Active__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>