force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Rpl_Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Registration_End_Date__c</fullName>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>