force-app/main/default/objects/Rpl_Reva_Placement__c/fields/Rpl_University_Department__c.field-meta.xml
<CustomField>
    <fullName>Rpl_University_Department__c</fullName>
    <label>University Department</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>