force-app/main/default/objects/Rpl_Reva_Placement__c/validationRules/Reg_End_dt_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_End_dt_greater_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>Rpl_Registration_End_Date__c  &lt;   Rpl_Registration_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Rpl_Registration_End_Date__c</errorDisplayField>
    <errorMessage>Registration End Date cannot be earlier than Registration Start Date.</errorMessage>
</ValidationRule>