force-app/main/default/objects/Rpl_Reva_Placement__c/validationRules/Reg_Start_dt_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Start_dt_greater_than_today</fullName>
    <active>false</active>
    <description>Created Validation rule for Registration Start Date</description>
    <errorConditionFormula>Rpl_Registration_Start_Date__c   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Rpl_Registration_Start_Date__c</errorDisplayField>
    <errorMessage>Registration Start Date cannot be Past Date</errorMessage>
</ValidationRule>