force-app/main/default/objects/Rpl_Reva_Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CurrentYear__c</columns>
    <columns>Rpl_Active__c</columns>
    <columns>Rpl_Academic_Program__c</columns>
    <columns>Rpl_Registration_Start_Date__c</columns>
    <columns>Rpl_Registration_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>